--- a/trabalho_pratico.ipynb
+++ b/trabalho_pratico.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,20 +231,56 @@
     "    ( 0.75, -0.2, -0.2),  # 7\n",
     "\n",
     "    # Asa direita\n",
-    "    (-0.25,  0.025, 1.0),  # Vértice ponta (meio da face) 8\n",
+    "    (-0.25,  0.025, 1.2),  # Vértice ponta (meio da face) 8\n",
     "    (-0.25,  0.025, 0.2),  # Base superior esquerda 9\n",
     "    (0.25, 0.025, 0.2),  # Base inferior esquerda 10\n",
-    "    (-0.25,  -0.025, 1.0),  # Vértice ponta (fundo do prisma) 11\n",
+    "    (-0.25,  -0.025, 1.2),  # Vértice ponta (fundo do prisma) 11\n",
     "    (-0.25,  -0.025, 0.2),  # Base superior esquerda (fundo) 12\n",
     "    (0.25, -0.025, 0.2),   # Base inferior esquerda (fundo) 13\n",
     "\n",
     "    # Asa esquerda\n",
-    "    (-0.25,  0.025, -1.0),  # 14\n",
+    "    (-0.25,  0.025, -1.2),  # 14\n",
     "    (-0.25,  0.025, -0.2),  # 15\n",
     "    (0.25, 0.025, -0.2),  #16\n",
-    "    (-0.25,  -0.025, -1.0),  #17\n",
+    "    (-0.25,  -0.025, -1.2),  #17\n",
     "    (-0.25,  -0.025, -0.2),  #18\n",
     "    (0.25, -0.025, -0.2),   #19\n",
+    "\n",
+    "    # Nariz\n",
+    "    ( 0.95,  0.1,  0.1), # 20 \n",
+    "    ( 0.95,  -0.1,  0.1), # 21\n",
+    "    ( 0.95,  0.1,  -0.1), # 22\n",
+    "    ( 0.95,  -0.1,  -0.1), # 23 (parte branca do nariz até aqui)\n",
+    "    ( 1.2, 0.0, 0.0), # 24 (pontinha vermelha do nariz)\n",
+    "\n",
+    "    # Traseira do avião\n",
+    "    ( -1.2, 0.2, 0.0), # 25\n",
+    "\n",
+    "    # Barbatana do avião\n",
+    "    ( -0.8, 0.2, 0.025), # 26\n",
+    "    ( -0.8, 0.2, -0.025), # 27\n",
+    "    ( -1.0, 0.2, 0.025), # 28\n",
+    "    ( -1.0, 0.2, -0.025), # 29\n",
+    "    ( -1.0, 0.6, 0.025), # 30\n",
+    "    ( -1.0, 0.6, -0.025), # 31\n",
+    "    ( -0.95, 0.6, 0.025), # 32\n",
+    "    ( -0.95, 0.6, -0.025), # 33\n",
+    "\n",
+    "    # Estabilizador Direito\n",
+    "    (-0.95,  0.025, 0.4),  # 34\n",
+    "    (-0.95,  0.025, 0.05),  # 35\n",
+    "    (-0.80, 0.025, 0.15),  # 36\n",
+    "    (-0.95,  -0.025, 0.4),  # 37\n",
+    "    (-0.95,  -0.025, 0.05),  # 38\n",
+    "    (-0.80, -0.025, 0.15),   # 39\n",
+    "\n",
+    "    # Estabilizador Esquerdo\n",
+    "    (-0.95,  0.025, -0.4),  # 40\n",
+    "    (-0.95,  0.025, -0.05),  # 41\n",
+    "    (-0.80, 0.025, -0.15),  # 42\n",
+    "    (-0.95,  -0.025, -0.4),  # 43\n",
+    "    (-0.95,  -0.025, -0.05),  # 44\n",
+    "    (-0.80, -0.025, -0.15),   # 45\n",
     "\n",
     "], dtype=np.float32)\n",
     "\n",
@@ -259,19 +295,61 @@
     "    0, 3, 7,  0, 7, 4,\n",
     "    1, 5, 6,  1, 6, 2,\n",
     "\n",
-    "    # Asa Direita (18 índices)\n",
+    "    # Asa Direita (24 índices)\n",
     "    8, 9, 10,\n",
     "    11, 13, 12,\n",
     "    8, 9, 12,  8, 12, 11,\n",
     "    8, 10, 13,  8, 13, 11,\n",
     "    9, 10, 13,  9, 13, 12,\n",
     "\n",
-    "    # Asa Direita (18 índices)\n",
+    "    # Asa Direita (24 índices)\n",
     "    14, 15, 16,\n",
     "    17, 19, 18,\n",
     "    14, 15, 18,  14, 18, 17,\n",
     "    14, 16, 19,  14, 19, 17,\n",
-    "    15, 16, 19,  15, 19, 18\n",
+    "    15, 16, 19,  15, 19, 18,\n",
+    "\n",
+    "    # Nariz parte branca (24 índices)\n",
+    "    20, 21, 22,\n",
+    "    21, 22, 23,\n",
+    "    0, 3, 20,  3, 20, 21,\n",
+    "    0, 4, 20,  4, 20, 22,\n",
+    "    4, 7, 22,  7, 22, 23,\n",
+    "    3, 7, 23,  3, 21, 23,\n",
+    "\n",
+    "    # Nariz parte vermelha (12 índices)\n",
+    "    20, 22, 24,\n",
+    "    20, 21, 24,\n",
+    "    21, 23, 24,\n",
+    "    22, 23, 24,\n",
+    "\n",
+    "    # Traseira do avião (12 índices)\n",
+    "    1, 2, 25,\n",
+    "    2, 5, 25,\n",
+    "    5, 6, 25,\n",
+    "    6, 1, 25,\n",
+    "\n",
+    "    # Barbatana (30 índices)\n",
+    "    26, 28, 30,  26, 30, 32,\n",
+    "    27, 29, 31,  27, 31, 33,\n",
+    "    26, 27, 32,  27, 32, 33,\n",
+    "    31, 32, 33,  30, 31, 32,\n",
+    "    28, 29, 30,  29, 30, 31,\n",
+    "\n",
+    "    # Estabilizador Direito (24 índices)\n",
+    "    34, 35, 36,\n",
+    "    37, 39, 38,\n",
+    "    34, 35, 38,  34, 38, 37,\n",
+    "    34, 36, 39,  34, 39, 37,\n",
+    "    35, 36, 39,  35, 39, 38,\n",
+    "\n",
+    "    # Estabilizador Esquerdo (24 índices)\n",
+    "    40, 41, 42,\n",
+    "    43, 45, 44,\n",
+    "    40, 41, 44,  40, 44, 43,\n",
+    "    40, 42, 45,  40, 45, 43,\n",
+    "    41, 42, 45,  41, 39, 44,\n",
+    "\n",
     "], dtype=np.uint32)\n"
    ]
   },
@@ -284,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,10 +525,29 @@
     "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0)\n",
     "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, None)\n",
     "\n",
-    "    # Asa\n",
+    "    # Asas (vermelhas)\n",
     "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0)\n",
     "    glDrawElements(GL_TRIANGLES, 48, GL_UNSIGNED_INT, ctypes.c_void_p(36 * 4))\n",
     "\n",
+    "    # Nariz\n",
+    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) # parte branca\n",
+    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(84 * 4))\n",
+    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) # parte vermelha\n",
+    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(114 * 4))\n",
+    "\n",
+    "    # Traseira\n",
+    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(126 * 4))\n",
+    "\n",
+    "    # Barbatana\n",
+    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(138 * 4))\n",
+    "\n",
+    "    # Estabilizador direito\n",
+    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 48, GL_UNSIGNED_INT, ctypes.c_void_p(168 * 4))\n",
+    "\n",
+    "    # Descomente as duas linhas abaixo para conseguir ver as arestas\n",
     "    glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0)  # Cor preta\n",
     "    glPolygonMode(GL_FRONT_AND_BACK, GL_LINE)    # Modo wireframe\n",
     "    glDrawElements(GL_TRIANGLES, len(indices), GL_UNSIGNED_INT, None)\n",
