--- a/trabalho_pratico.ipynb
+++ b/trabalho_pratico.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 577,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 580,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
     "    ( 0.95,  -0.1,  0.1), # 21\n",
     "    ( 0.95,  0.1,  -0.1), # 22\n",
     "    ( 0.95,  -0.1,  -0.1), # 23 (parte branca do nariz até aqui)\n",
-    "    ( 1.2, 0.0, 0.0), # 24 (pontinha vermelha do nariz)\n",
+    "    ( 1.2, 0.0, 0.0), # 24 (pontinha roxa do nariz)\n",
     "\n",
     "    # Traseira do avião\n",
     "    ( -1.2, 0.2, 0.0), # 25\n",
@@ -287,37 +287,31 @@
     "import numpy as np\n",
     "\n",
     "indices = np.array([\n",
-    "    # Fuselagem (36 índices)\n",
+    "    # Fuselagem (24 índices)\n",
     "    0, 1, 2,  0, 2, 3,\n",
     "    4, 6, 5,  4, 7, 6,\n",
     "    0, 4, 5,  0, 5, 1,\n",
     "    2, 6, 7,  2, 7, 3,\n",
-    "    0, 3, 7,  0, 7, 4,\n",
-    "    1, 5, 6,  1, 6, 2,\n",
     "\n",
-    "    # Asa Direita (24 índices)\n",
+    "    # Asa Direita (18 índices)\n",
     "    8, 9, 10,\n",
     "    11, 13, 12,\n",
     "    8, 9, 12,  8, 12, 11,\n",
     "    8, 10, 13,  8, 13, 11,\n",
-    "    9, 10, 13,  9, 13, 12,\n",
     "\n",
-    "    # Asa Direita (24 índices)\n",
+    "    # Asa Esquerda (18 índices)\n",
     "    14, 15, 16,\n",
     "    17, 19, 18,\n",
     "    14, 15, 18,  14, 18, 17,\n",
     "    14, 16, 19,  14, 19, 17,\n",
-    "    15, 16, 19,  15, 19, 18,\n",
     "\n",
     "    # Nariz parte branca (24 índices)\n",
-    "    20, 21, 22,\n",
-    "    21, 22, 23,\n",
     "    0, 3, 20,  3, 20, 21,\n",
     "    0, 4, 20,  4, 20, 22,\n",
     "    4, 7, 22,  7, 22, 23,\n",
     "    3, 7, 23,  3, 21, 23,\n",
     "\n",
-    "    # Nariz parte vermelha (12 índices)\n",
+    "    # Nariz parte roxa (12 índices)\n",
     "    20, 22, 24,\n",
     "    20, 21, 24,\n",
     "    21, 23, 24,\n",
@@ -327,7 +321,7 @@
     "    1, 2, 25,\n",
     "    2, 5, 25,\n",
     "    5, 6, 25,\n",
-    "    6, 1, 25,\n",
+    "    1, 5, 25,\n",
     "\n",
     "    # Barbatana (30 índices)\n",
     "    26, 28, 30,  26, 30, 32,\n",
@@ -336,19 +330,17 @@
     "    31, 32, 33,  30, 31, 32,\n",
     "    28, 29, 30,  29, 30, 31,\n",
     "\n",
-    "    # Estabilizador Direito (24 índices)\n",
+    "    # Estabilizador Direito (18 índices)\n",
     "    34, 35, 36,\n",
     "    37, 39, 38,\n",
     "    34, 35, 38,  34, 38, 37,\n",
     "    34, 36, 39,  34, 39, 37,\n",
-    "    35, 36, 39,  35, 39, 38,\n",
     "\n",
-    "    # Estabilizador Esquerdo (24 índices)\n",
+    "    # Estabilizador Esquerdo (18 índices)\n",
     "    40, 41, 42,\n",
     "    43, 45, 44,\n",
     "    40, 41, 44,  40, 44, 43,\n",
     "    40, 42, 45,  40, 45, 43,\n",
-    "    41, 42, 45,  41, 39, 44,\n",
     "\n",
     "], dtype=np.uint32)\n"
    ]
@@ -362,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,33 +515,33 @@
     "    # Desenha as partes do avião com cores diferentes\n",
     "    # Corpo principal (branco)\n",
     "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0)\n",
-    "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, None)\n",
+    "    glDrawElements(GL_TRIANGLES, 24, GL_UNSIGNED_INT, None)\n",
     "\n",
-    "    # Asas (vermelhas)\n",
-    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0)\n",
-    "    glDrawElements(GL_TRIANGLES, 48, GL_UNSIGNED_INT, ctypes.c_void_p(36 * 4))\n",
+    "    # Asas (roxas)\n",
+    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0)\n",
+    "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, ctypes.c_void_p(24 * 4))\n",
     "\n",
     "    # Nariz\n",
     "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) # parte branca\n",
-    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(84 * 4))\n",
-    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) # parte vermelha\n",
-    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(114 * 4))\n",
+    "    glDrawElements(GL_TRIANGLES, 24, GL_UNSIGNED_INT, ctypes.c_void_p(60 * 4))\n",
+    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) # parte roxa\n",
+    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(84 * 4))\n",
     "\n",
     "    # Traseira\n",
     "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(126 * 4))\n",
+    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(96 * 4))\n",
     "\n",
     "    # Barbatana\n",
-    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(138 * 4))\n",
+    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(108 * 4))\n",
     "\n",
     "    # Estabilizador direito\n",
-    "    glUniform4f(loc_color, 1.0, 0.0, 0.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 48, GL_UNSIGNED_INT, ctypes.c_void_p(168 * 4))\n",
+    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, ctypes.c_void_p(138 * 4))\n",
     "\n",
     "    # Descomente as duas linhas abaixo para conseguir ver as arestas\n",
-    "    glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0)  # Cor preta\n",
-    "    glPolygonMode(GL_FRONT_AND_BACK, GL_LINE)    # Modo wireframe\n",
+    "    # glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0)  # Cor preta\n",
+    "    # glPolygonMode(GL_FRONT_AND_BACK, GL_LINE)    # Modo wireframe\n",
     "    glDrawElements(GL_TRIANGLES, len(indices), GL_UNSIGNED_INT, None)\n",
     "    glPolygonMode(GL_FRONT_AND_BACK, GL_FILL)    # Volta ao modo sólido\n",
     "    \n",
