Feat: criação do objeto oceano

--- a/objetos/oceano.ipynb
+++ b/objetos/oceano.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: PyOpenGL in c:\\users\\kasat\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (3.1.9)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: PyOpenGL in c:\\users\\kasat\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (3.1.9)\n",
+      "\n"
      ]
     },
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,29 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
     "vertex_code = \"\"\"\n",
-    "    #version 330 core\n",
-    "    layout (location = 0) in vec3 position;\n",
-    "    uniform mat4 mat_transformation;\n",
-    "    \n",
-    "    void main() {\n",
-    "        gl_Position = mat_transformation * vec4(position, 1.0);\n",
-    "    }\n",
-    "\"\"\"\n",
+    "        attribute vec2 position;\n",
+    "        uniform mat4 mat_transformation;\n",
+    "        void main(){\n",
+    "            gl_Position = mat_transformation * vec4(position,0.0,1.0);\n",
+    "        }\n",
+    "        \"\"\"\n",
     "\n",
     "fragment_code = \"\"\"\n",
-    "    #version 330 core\n",
-    "    uniform vec4 color;\n",
-    "    out vec4 FragColor;\n",
-    "    \n",
-    "    void main() {\n",
-    "        FragColor = color;\n",
-    "    }\n",
-    "\"\"\"\n",
+    "        uniform vec4 color;\n",
+    "        void main(){\n",
+    "            gl_FragColor = color;\n",
+    "        }\n",
+    "        \"\"\"\n",
     "\n",
     "program  = glCreateProgram()\n",
     "vertex   = glCreateShader(GL_VERTEX_SHADER)\n",
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,131 +210,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
     "vertices = np.array([\n",
-    "    # Fuselagem (retangular)\n",
-    "    ( 0.75,  0.2,  0.2),  # 0\n",
-    "    (-0.75,  0.2,  0.2),  # 1\n",
-    "    (-0.75, -0.2,  0.2),  # 2 \n",
-    "    ( 0.75, -0.2,  0.2),  # 3\n",
-    "    ( 0.75,  0.2, -0.2),  # 4\n",
-    "    (-0.75,  0.2, -0.2),  # 5\n",
-    "    (-0.75, -0.2, -0.2),  # 6\n",
-    "    ( 0.75, -0.2, -0.2),  # 7\n",
+    "    # Retângulo principal do mar\n",
+    "    (-1.0, -0.5, 0.0),  # 0 \n",
+    "    (1.0, -0.5, 0.0),   # 1\n",
+    "    (-1.0, 0.0, 0.0),   # 2\n",
+    "    (1.0, 0.0, 0.0),    # 3\n",
     "\n",
-    "    # Asa direita\n",
-    "    (-0.25,  0.025, 1.2),  # Vértice ponta (meio da face) 8\n",
-    "    (-0.25,  0.025, 0.2),  # Base superior esquerda 9\n",
-    "    (0.25, 0.025, 0.2),  # Base inferior esquerda 10\n",
-    "    (-0.25,  -0.025, 1.2),  # Vértice ponta (fundo do prisma) 11\n",
-    "    (-0.25,  -0.025, 0.2),  # Base superior esquerda (fundo) 12\n",
-    "    (0.25, -0.025, 0.2),   # Base inferior esquerda (fundo) 13\n",
+    "    # Estrutura para as ondinhas\n",
+    "    (-0.9, 0.0, 0.0),   # 4\n",
+    "    (-0.8, 0.0, 0.0),   # 5\n",
+    "    (-0.7, 0.0, 0.0),   # 6\n",
+    "    (-0.6, 0.0, 0.0),   # 7\n",
+    "    (-0.5, 0.0, 0.0),   # 8\n",
+    "    (-0.4, 0.0, 0.0),   # 9\n",
+    "    (-0.3, 0.0, 0.0),   # 10\n",
+    "    (-0.2, 0.0, 0.0),   # 11\n",
+    "    (-0.1, 0.0, 0.0),   # 12\n",
+    "    (0.0, 0.0, 0.0),    # 13\n",
+    "    (0.1, 0.0, 0.0),    # 14\n",
+    "    (0.2, 0.0, 0.0),    # 15\n",
+    "    (0.3, 0.0, 0.0),    # 16\n",
+    "    (0.4, 0.0, 0.0),    # 17\n",
+    "    (0.5, 0.0, 0.0),    # 18\n",
+    "    (0.6, 0.0, 0.0),    # 19\n",
+    "    (0.7, 0.0, 0.0),    # 20\n",
+    "    (0.8, 0.0, 0.0),    # 21\n",
+    "    (0.9, 0.0, 0.0),    # 22\n",
     "\n",
-    "    # Asa esquerda\n",
-    "    (-0.25,  0.025, -1.2),  # 14\n",
-    "    (-0.25,  0.025, -0.2),  # 15\n",
-    "    (0.25, 0.025, -0.2),  #16\n",
-    "    (-0.25,  -0.025, -1.2),  #17\n",
-    "    (-0.25,  -0.025, -0.2),  #18\n",
-    "    (0.25, -0.025, -0.2),   #19\n",
+    "    # Ondinhas azuis padrão\n",
+    "    (-0.95, 0.03, 0.0),  # 23\n",
+    "    (-0.75, 0.03, 0.0),  # 24\n",
+    "    (-0.55, 0.03, 0.0),  # 25\n",
+    "    (-0.35, 0.03, 0.0),  # 26\n",
+    "    (-0.15, 0.03, 0.0),  # 27\n",
+    "    (0.05, 0.03, 0.0),   # 28\n",
+    "    (0.25, 0.03, 0.0),   # 29\n",
+    "    (0.45, 0.03, 0.0),   # 30\n",
+    "    (0.65, 0.03, 0.0),   # 31\n",
+    "    (0.85, 0.03, 0.0),   # 32\n",
     "\n",
-    "    # Nariz\n",
-    "    ( 0.95,  0.1,  0.1), # 20 \n",
-    "    ( 0.95,  -0.1,  0.1), # 21\n",
-    "    ( 0.95,  0.1,  -0.1), # 22\n",
-    "    ( 0.95,  -0.1,  -0.1), # 23 (parte branca do nariz até aqui)\n",
-    "    ( 1.2, 0.0, 0.0), # 24 (pontinha roxa do nariz)\n",
-    "\n",
-    "    # Traseira do avião\n",
-    "    ( -1.2, 0.2, 0.0), # 25\n",
-    "\n",
-    "    # Barbatana do avião\n",
-    "    ( -0.8, 0.2, 0.025), # 26\n",
-    "    ( -0.8, 0.2, -0.025), # 27\n",
-    "    ( -1.0, 0.2, 0.025), # 28\n",
-    "    ( -1.0, 0.2, -0.025), # 29\n",
-    "    ( -1.0, 0.6, 0.025), # 30\n",
-    "    ( -1.0, 0.6, -0.025), # 31\n",
-    "    ( -0.95, 0.6, 0.025), # 32\n",
-    "    ( -0.95, 0.6, -0.025), # 33\n",
-    "\n",
-    "    # Estabilizador Direito\n",
-    "    (-0.95,  0.025, 0.4),  # 34\n",
-    "    (-0.95,  0.025, 0.05),  # 35\n",
-    "    (-0.80, 0.025, 0.15),  # 36\n",
-    "    (-0.95,  -0.025, 0.4),  # 37\n",
-    "    (-0.95,  -0.025, 0.05),  # 38\n",
-    "    (-0.80, -0.025, 0.15),   # 39\n",
-    "\n",
-    "    # Estabilizador Esquerdo\n",
-    "    (-0.95,  0.025, -0.4),  # 40\n",
-    "    (-0.95,  0.025, -0.05),  # 41\n",
-    "    (-0.80, 0.025, -0.15),  # 42\n",
-    "    (-0.95,  -0.025, -0.4),  # 43\n",
-    "    (-0.95,  -0.025, -0.05),  # 44\n",
-    "    (-0.80, -0.025, -0.15),   # 45\n",
-    "\n",
+    "    # Ondinhas azuis claro\n",
+    "    (-0.85, 0.03, 0.0), # 33\n",
+    "    (-0.65, 0.03, 0.0), # 34\n",
+    "    (-0.45, 0.03, 0.0), # 35\n",
+    "    (-0.25, 0.03, 0.0), # 36\n",
+    "    (-0.05, 0.03, 0.0), # 37\n",
+    "    (0.15, 0.03, 0.0),  # 38\n",
+    "    (0.35, 0.03, 0.0),  # 39\n",
+    "    (0.55, 0.03, 0.0),  # 40\n",
+    "    (0.75, 0.03, 0.0),  # 41\n",
+    "    (0.95, 0.03, 0.0),  # 42\n",
     "], dtype=np.float32)\n",
     "\n",
     "indices = np.array([\n",
-    "    # Fuselagem (24 índices)\n",
-    "    0, 1, 2,  0, 2, 3,\n",
-    "    4, 6, 5,  4, 7, 6,\n",
-    "    0, 4, 5,  0, 5, 1,\n",
-    "    2, 6, 7,  2, 7, 3,\n",
+    "    # Retângulo Principal\n",
+    "    0, 1, 2,\n",
+    "    1, 2, 3,\n",
     "\n",
-    "    # Asa Direita (18 índices)\n",
-    "    8, 9, 10,\n",
-    "    11, 13, 12,\n",
-    "    8, 9, 12,  8, 12, 11,\n",
-    "    8, 10, 13,  8, 13, 11,\n",
+    "    # Ondinhas padrões\n",
+    "    2, 23, 4,\n",
+    "    5, 24, 6,\n",
+    "    7, 25, 8,\n",
+    "    9, 26, 10,\n",
+    "    11, 27, 12,\n",
+    "    13, 28, 14,\n",
+    "    15, 29, 16,\n",
+    "    17, 30, 18,\n",
+    "    19, 31, 20,\n",
+    "    21, 32, 22,\n",
     "\n",
-    "    # Asa Esquerda (18 índices)\n",
-    "    14, 15, 16,\n",
-    "    17, 19, 18,\n",
-    "    14, 15, 18,  14, 18, 17,\n",
-    "    14, 16, 19,  14, 19, 17,\n",
-    "\n",
-    "    # Nariz parte branca (24 índices)\n",
-    "    0, 3, 20,  3, 20, 21,\n",
-    "    0, 4, 20,  4, 20, 22,\n",
-    "    4, 7, 22,  7, 22, 23,\n",
-    "    3, 7, 23,  3, 21, 23,\n",
-    "\n",
-    "    # Nariz parte roxa (12 índices)\n",
-    "    20, 22, 24,\n",
-    "    20, 21, 24,\n",
-    "    21, 23, 24,\n",
-    "    22, 23, 24,\n",
-    "\n",
-    "    # Traseira do avião (12 índices)\n",
-    "    1, 2, 25,\n",
-    "    2, 5, 25,\n",
-    "    5, 6, 25,\n",
-    "    1, 5, 25,\n",
-    "\n",
-    "    # Barbatana (30 índices)\n",
-    "    26, 28, 30,  26, 30, 32,\n",
-    "    27, 29, 31,  27, 31, 33,\n",
-    "    26, 27, 32,  27, 32, 33,\n",
-    "    31, 32, 33,  30, 31, 32,\n",
-    "    28, 29, 30,  29, 30, 31,\n",
-    "\n",
-    "    # Estabilizador Direito (18 índices)\n",
-    "    34, 35, 36,\n",
-    "    37, 39, 38,\n",
-    "    34, 35, 38,  34, 38, 37,\n",
-    "    34, 36, 39,  34, 39, 37,\n",
-    "\n",
-    "    # Estabilizador Esquerdo (18 índices)\n",
-    "    40, 41, 42,\n",
-    "    43, 45, 44,\n",
-    "    40, 41, 44,  40, 44, 43,\n",
-    "    40, 42, 45,  40, 45, 43,\n",
-    "\n",
+    "    # Ondinhas mais claras\n",
+    "    4, 33, 5,\n",
+    "    6, 34, 7,\n",
+    "    8, 35, 9,\n",
+    "    10, 36, 11,\n",
+    "    12, 37, 13,\n",
+    "    14, 38, 15,\n",
+    "    16, 39, 17,\n",
+    "    18, 40, 19,\n",
+    "    20, 41, 21,\n",
+    "    22, 42, 3,\n",
     "], dtype=np.uint32)\n"
    ]
   },
@@ -352,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
-    "glVertexAttribPointer(0, 3, GL_FLOAT, False, 12, ctypes.c_void_p(0))\n",
+    "glVertexAttribPointer(0, 2, GL_FLOAT, False, 12, ctypes.c_void_p(0))\n",
     "glEnableVertexAttribArray(0)"
    ]
   },
@@ -401,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,11 +370,11 @@
     "    if key == 263: t_x -= 0.01 #esquerda\n",
     "    if key == 262: t_x += 0.01 #direita\n",
     "\n",
-    "    if key == 65:  angulo += 0.1 # gira para a direita\n",
-    "    if key == 83:  angulo -= 0.1 # gira para a esquerda\n",
+    "    if key == 65:  angulo += 0.05 # gira para a direita\n",
+    "    if key == 83:  angulo -= 0.05 # gira para a esquerda\n",
     "\n",
-    "    if key == 90: escala += 0.1 * fator_escala # aumenta escala \n",
-    "    if key == 88: escala -= 0.1 * fator_escala # diminui escala\n",
+    "    if key == 90: escala += 0.05 * fator_escala # aumenta escala \n",
+    "    if key == 88: escala -= 0.05 * fator_escala # diminui escala\n",
     "\n",
     "    if key == 82: \n",
     "        t_x = 0\n",
@@ -441,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,15 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "angulo = 0\n",
-    "t_x = 0\n",
-    "t_y = 0\n",
+    "t_x = 0.0\n",
+    "t_y = -0.5\n",
     "escala = 1\n",
     "\n",
     "\n",
@@ -470,78 +425,60 @@
     "    return c\n",
     "\n",
     "# Matriz de projeção ortográfica (mapeia coordenadas 3D para a tela)\n",
-    "glEnable(GL_DEPTH_TEST)\n",
+    "glEnable(GL_BLEND);\n",
+    "glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);\n",
     "glClearColor(0.53, 0.81, 0.92, 1.0)  # Cor de céu\n",
-    "\n",
-    "# Matriz de projeção perspectiva\n",
-    "width, height = glfw.get_window_size(window)\n",
-    "proj = glm.perspective(glm.radians(60.0), width/height, 0.1, 100.0)\n",
-    "\n",
-    "# Posição da câmera\n",
-    "view = glm.lookAt(\n",
-    "    glm.vec3(2, 2, 2),  # Posição da câmera\n",
-    "    glm.vec3(0, 0, 0),  # Ponto para onde olha\n",
-    "    glm.vec3(0, 1, 0)   # Vetor \"para cima\"\n",
-    ")\n",
-    "\n",
-    "# Enviamos para o shader\n",
-    "loc_transform = glGetUniformLocation(program, \"mat_transformation\")\n",
-    "loc_color = glGetUniformLocation(program, \"color\")\n",
-    "\n",
     "\n",
     "# Loop principal\n",
     "while not glfw.window_should_close(window):\n",
-    "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT)\n",
+    "    glClear(GL_COLOR_BUFFER_BIT)\n",
     "\n",
-    "    # Animação de rotação\n",
-    "    angulo += 0.0001\n",
-    "    model = glm.mat4(1.0)\n",
-    "    model = glm.rotate(model, angulo, glm.vec3(0, 1, 0))  # Rotaciona em Y\n",
-    "    \n",
+    "    c = math.cos(angulo)\n",
+    "    s = math.sin(angulo)\n",
+    "\n",
+    "    mat_translation = np.array([\n",
+    "        1, 0, 0, t_x,\n",
+    "        0, 1, 0, t_y,\n",
+    "        0, 0, 1, 0,\n",
+    "        0, 0, 0, 1\n",
+    "    ], np.float32)\n",
+    "\n",
     "    # Configura transformações\n",
-    "    mat_model = glm.mat4(1.0)\n",
-    "    mat_model = glm.translate(mat_model, glm.vec3(t_x, t_y, 0.0))\n",
-    "    mat_model = glm.rotate(mat_model, angulo, glm.vec3(0.0, 0.0, 1.0))\n",
-    "    mat_model = glm.scale(mat_model, glm.vec3(escala, escala, 1.0))\n",
+    "    mat_rotation = np.array([       c,   -s,  0.0, 0.0, \n",
+    "                                    s,    c,  0.0, 0.0, \n",
+    "                                    0.0, 0.0, 1.0, 0.0, \n",
+    "                                    0.0, 0.0, 0.0, 1.0], np.float32)\n",
     "    \n",
-    "    # Matriz final\n",
-    "    mvp = proj * view * model\n",
+    "    mat_scale = np.array([\n",
+    "        escala, 0, 0, 0,\n",
+    "        0, escala, 0, 0,\n",
+    "        0, 0, 1, 0,\n",
+    "        0, 0, 0, 1\n",
+    "    ], np.float32)\n",
+    "\n",
+    "    loc = glGetUniformLocation(program, \"mat_transformation\")\n",
     "    \n",
-    "    # Envia para o shader\n",
-    "    glUniformMatrix4fv(loc_transform, 1, GL_FALSE, glm.value_ptr(mvp))\n",
-    "    \n",
-    "    # Desenha as partes do avião com cores diferentes\n",
-    "    # Corpo principal (branco)\n",
-    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0)\n",
-    "    glDrawElements(GL_TRIANGLES, 24, GL_UNSIGNED_INT, None)\n",
+    "    mat_partial = multiplica_matriz(mat_rotation, mat_translation)\n",
+    "    mat_definitive = multiplica_matriz(mat_partial, mat_scale)\n",
+    "    glUniformMatrix4fv(loc, 1, GL_TRUE, mat_definitive)\n",
     "\n",
-    "    # Asas (roxas)\n",
-    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0)\n",
-    "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, ctypes.c_void_p(24 * 4))\n",
+    "    # Desenha o mar\n",
+    "    # Retângulo Principal\n",
+    "    glUniform4f(loc_color, 0.0, 0.0, 1.0, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 6, GL_UNSIGNED_INT, None)\n",
     "\n",
-    "    # Nariz\n",
-    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) # parte branca\n",
-    "    glDrawElements(GL_TRIANGLES, 24, GL_UNSIGNED_INT, ctypes.c_void_p(60 * 4))\n",
-    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) # parte roxa\n",
-    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(84 * 4))\n",
+    "    # Ondinhas padrões\n",
+    "    glUniform4f(loc_color, 0.0, 0.0, 1.0, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(6 * 4))\n",
     "\n",
-    "    # Traseira\n",
-    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 12, GL_UNSIGNED_INT, ctypes.c_void_p(96 * 4))\n",
+    "    # Ondinhas mais claras\n",
+    "    glUniform4f(loc_color, 0.678, 0.847, 0.902, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(36 * 4))\n",
     "\n",
-    "    # Barbatana\n",
-    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(108 * 4))\n",
-    "\n",
-    "    # Estabilizador direito\n",
-    "    glUniform4f(loc_color, 0.4, 0.1, 0.8, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 36, GL_UNSIGNED_INT, ctypes.c_void_p(138 * 4))\n",
     "\n",
     "    # Descomente as duas linhas abaixo para conseguir ver as arestas\n",
     "    # glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0)  # Cor preta\n",
     "    # glPolygonMode(GL_FRONT_AND_BACK, GL_LINE)    # Modo wireframe\n",
-    "    glDrawElements(GL_TRIANGLES, len(indices), GL_UNSIGNED_INT, None)\n",
-    "    glPolygonMode(GL_FRONT_AND_BACK, GL_FILL)    # Volta ao modo sólido\n",
     "    \n",
     "    glfw.swap_buffers(window)\n",
     "    glfw.poll_events()\n",
