Feat: criando objeto sol e ajustando o objeto oceano

--- a/objetos/sol.ipynb
+++ b/objetos/sol.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: glfw in c:\\users\\kasat\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (2.8.0)\n",
-      "\n"
+      "Requirement already satisfied: glfw in c:\\users\\kasat\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (2.8.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,92 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices = np.array([\n",
-    "    # Retângulo principal do mar\n",
-    "    (-1.0, -0.5, 0.0),  # 0 \n",
-    "    (1.0, -0.5, 0.0),   # 1\n",
-    "    (-1.0, 0.0, 0.0),   # 2\n",
-    "    (1.0, 0.0, 0.0),    # 3\n",
+    "# Gerando um isodecágono pra representar o sol\n",
+    "n_lados = 20  \n",
+    "angles = np.linspace(0, 2 * np.pi, n_lados, endpoint=False)\n",
+    "vertices = [(np.cos(a), np.sin(a), 0.0) for a in angles]\n",
     "\n",
-    "    # Estrutura para as ondinhas\n",
-    "    (-0.9, 0.0, 0.0),   # 4\n",
-    "    (-0.8, 0.0, 0.0),   # 5\n",
-    "    (-0.7, 0.0, 0.0),   # 6\n",
-    "    (-0.6, 0.0, 0.0),   # 7\n",
-    "    (-0.5, 0.0, 0.0),   # 8\n",
-    "    (-0.4, 0.0, 0.0),   # 9\n",
-    "    (-0.3, 0.0, 0.0),   # 10\n",
-    "    (-0.2, 0.0, 0.0),   # 11\n",
-    "    (-0.1, 0.0, 0.0),   # 12\n",
-    "    (0.0, 0.0, 0.0),    # 13\n",
-    "    (0.1, 0.0, 0.0),    # 14\n",
-    "    (0.2, 0.0, 0.0),    # 15\n",
-    "    (0.3, 0.0, 0.0),    # 16\n",
-    "    (0.4, 0.0, 0.0),    # 17\n",
-    "    (0.5, 0.0, 0.0),    # 18\n",
-    "    (0.6, 0.0, 0.0),    # 19\n",
-    "    (0.7, 0.0, 0.0),    # 20\n",
-    "    (0.8, 0.0, 0.0),    # 21\n",
-    "    (0.9, 0.0, 0.0),    # 22\n",
+    "# Adiciona o ponto central (para o triângulo fan)\n",
+    "vertices.insert(0, (0.0, 0.0, 0.0))\n",
     "\n",
-    "    # Ondinhas azuis padrão\n",
-    "    (-0.95, 0.03, 0.0),  # 23\n",
-    "    (-0.75, 0.03, 0.0),  # 24\n",
-    "    (-0.55, 0.03, 0.0),  # 25\n",
-    "    (-0.35, 0.03, 0.0),  # 26\n",
-    "    (-0.15, 0.03, 0.0),  # 27\n",
-    "    (0.05, 0.03, 0.0),   # 28\n",
-    "    (0.25, 0.03, 0.0),   # 29\n",
-    "    (0.45, 0.03, 0.0),   # 30\n",
-    "    (0.65, 0.03, 0.0),   # 31\n",
-    "    (0.85, 0.03, 0.0),   # 32\n",
+    "# Índices para triangulação usando GL_TRIANGLE_FAN\n",
+    "indices = [0] + list(range(1, n_lados + 1)) + [1]  # Fecha o último triângulo\n",
     "\n",
-    "    # Ondinhas azuis claro\n",
-    "    (-0.85, 0.03, 0.0), # 33\n",
-    "    (-0.65, 0.03, 0.0), # 34\n",
-    "    (-0.45, 0.03, 0.0), # 35\n",
-    "    (-0.25, 0.03, 0.0), # 36\n",
-    "    (-0.05, 0.03, 0.0), # 37\n",
-    "    (0.15, 0.03, 0.0),  # 38\n",
-    "    (0.35, 0.03, 0.0),  # 39\n",
-    "    (0.55, 0.03, 0.0),  # 40\n",
-    "    (0.75, 0.03, 0.0),  # 41\n",
-    "    (0.95, 0.03, 0.0),  # 42\n",
-    "], dtype=np.float32)\n",
-    "\n",
-    "indices = np.array([\n",
-    "    # Retângulo Principal\n",
-    "    0, 1, 2,\n",
-    "    1, 2, 3,\n",
-    "\n",
-    "    # Ondinhas padrões\n",
-    "    2, 23, 4,\n",
-    "    5, 24, 6,\n",
-    "    7, 25, 8,\n",
-    "    9, 26, 10,\n",
-    "    11, 27, 12,\n",
-    "    13, 28, 14,\n",
-    "    15, 29, 16,\n",
-    "    17, 30, 18,\n",
-    "    19, 31, 20,\n",
-    "    21, 32, 22,\n",
-    "\n",
-    "    # Ondinhas mais claras\n",
-    "    4, 33, 5,\n",
-    "    6, 34, 7,\n",
-    "    8, 35, 9,\n",
-    "    10, 36, 11,\n",
-    "    12, 37, 13,\n",
-    "    14, 38, 15,\n",
-    "    16, 39, 17,\n",
-    "    18, 40, 19,\n",
-    "    20, 41, 21,\n",
-    "    22, 42, 3,\n",
-    "], dtype=np.uint32)\n"
+    "# Converte para NumPy para poder usar as funções do próximo bloco\n",
+    "vertices = np.array(vertices, dtype=np.float32)\n",
+    "indices = np.array(indices, dtype=np.uint32)"
    ]
   },
   {
@@ -307,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,8 +345,8 @@
     "\n",
     "angulo = 0\n",
     "t_x = 0.0\n",
-    "t_y = -0.75\n",
-    "escala = 1\n",
+    "t_y = 0.0\n",
+    "escala = 0.5\n",
     "\n",
     "\n",
     "def multiplica_matriz(a,b):\n",
@@ -463,19 +395,9 @@
     "    mat_definitive = multiplica_matriz(mat_partial, mat_scale)\n",
     "    glUniformMatrix4fv(loc, 1, GL_TRUE, mat_definitive)\n",
     "\n",
-    "    # Desenha o mar\n",
-    "    # Retângulo Principal\n",
-    "    glUniform4f(loc_color, 0.0, 0.0, 1.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 6, GL_UNSIGNED_INT, None)\n",
-    "\n",
-    "    # Ondinhas padrões\n",
-    "    glUniform4f(loc_color, 0.0, 0.0, 1.0, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(6 * 4))\n",
-    "\n",
-    "    # Ondinhas mais claras\n",
-    "    glUniform4f(loc_color, 0.678, 0.847, 0.902, 1.0) \n",
-    "    glDrawElements(GL_TRIANGLES, 30, GL_UNSIGNED_INT, ctypes.c_void_p(36 * 4))\n",
-    "\n",
+    "    # Desenha o sol\n",
+    "    glUniform4f(loc_color, 1.0, 0.85, 0.3, 1.0) \n",
+    "    glDrawElements(GL_TRIANGLE_FAN, len(indices), GL_UNSIGNED_INT, None);\n",
     "\n",
     "    # Descomente as duas linhas abaixo para conseguir ver as arestas\n",
     "    # glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0)  # Cor preta\n",
