Feat: objs pessoa sentada e mala

--- a/13-pratica/onibus.ipynb
+++ b/13-pratica/onibus.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carregando textura: ../objetos_baixados/onibus/texturas/bus_BaseColor.png\n",
-      "Carregando textura: ../objetos_baixados/onibus/texturas/base2_BaseColor.png\n",
-      "Carregando textura: ../objetos_baixados/onibus/texturas/glass_op.png\n"
+      "Carregando textura: ../objetos_baixados/onibus/texturas/2_MIRORAPPLY_UV_Material.003_BaseColor.png\n",
+      "Erro ao carregar textura BaseColor: [Errno 2] No such file or directory: 'C:\\\\Users\\\\kasat\\\\Downloads\\\\amanda\\\\Documentos\\\\USP\\\\2025.1\\\\CG\\\\trabalhoPratico\\\\ComputacaoGrafica\\\\objetos_baixados\\\\onibus\\\\texturas\\\\2_MIRORAPPLY_UV_Material.003_BaseColor.png'\n",
+      "Carregando textura: ../objetos_baixados/onibus/texturas/2_MIRORAPPLY_UV_Material.003_Normal.png\n",
+      "Erro ao carregar textura Normal: [Errno 2] No such file or directory: 'C:\\\\Users\\\\kasat\\\\Downloads\\\\amanda\\\\Documentos\\\\USP\\\\2025.1\\\\CG\\\\trabalhoPratico\\\\ComputacaoGrafica\\\\objetos_baixados\\\\onibus\\\\texturas\\\\2_MIRORAPPLY_UV_Material.003_Normal.png'\n",
+      "Carregando textura: ../objetos_baixados/onibus/texturas/2_MIRORAPPLY_UV_Material.003_Metallic.png\n",
+      "Erro ao carregar textura Metallic: [Errno 2] No such file or directory: 'C:\\\\Users\\\\kasat\\\\Downloads\\\\amanda\\\\Documentos\\\\USP\\\\2025.1\\\\CG\\\\trabalhoPratico\\\\ComputacaoGrafica\\\\objetos_baixados\\\\onibus\\\\texturas\\\\2_MIRORAPPLY_UV_Material.003_Metallic.png'\n",
+      "Carregando textura: ../objetos_baixados/onibus/texturas/2_MIRORAPPLY_UV_Material.003_Height.png\n",
+      "Erro ao carregar textura Height: [Errno 2] No such file or directory: 'C:\\\\Users\\\\kasat\\\\Downloads\\\\amanda\\\\Documentos\\\\USP\\\\2025.1\\\\CG\\\\trabalhoPratico\\\\ComputacaoGrafica\\\\objetos_baixados\\\\onibus\\\\texturas\\\\2_MIRORAPPLY_UV_Material.003_Height.png'\n"
      ]
     }
    ],
@@ -345,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,9 +381,10 @@
       "texture_coord: 1\n",
       "\n",
       "Texturas carregadas:\n",
-      "bus: ID 0\n",
-      "base2: ID 1\n",
-      "glass: ID 2\n"
+      "BaseColor: ID 0\n",
+      "Normal: ID 0\n",
+      "Metallic: ID 0\n",
+      "Height: ID 0\n"
      ]
     }
    ],
@@ -425,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,9 +628,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'bus'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 22\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n\u001b[1;32m---> 22\u001b[0m \u001b[43mdesenha_onibus\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaterial_groups\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtexture_ids\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m mat_view \u001b[38;5;241m=\u001b[39m view()\n\u001b[0;32m     25\u001b[0m loc_view \u001b[38;5;241m=\u001b[39m glGetUniformLocation(program, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mview\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[5], line 15\u001b[0m, in \u001b[0;36mdesenha_onibus\u001b[1;34m(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z, material_groups, texture_ids)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Ordem de renderização corrigida\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m material \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbus\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbase2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mglass\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m---> 15\u001b[0m     group \u001b[38;5;241m=\u001b[39m \u001b[43mmaterial_groups\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmaterial\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m material \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mglass\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     18\u001b[0m         glEnable(GL_BLEND)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'bus'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "glEnable(GL_DEPTH_TEST) ### importante para 3D\n",
     "polygonal_mode = False \n",
